--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-WSMYELV32L');
 </script>
 
-<meta name="description" content="A unblocked games site that is easy to deploy, has tons of games, and is nice to the eyes">
+<meta name="description" content="Long live biggbetter96, the students hero...">
  
 <link rel="stylesheet" href="style.css">
 <header>
@@ -1045,4 +1045,4 @@
 
 <hr>
 
-<p1>&copy; Bighummus Games</p1>
+<p1>OG site from bighummus69, but I added some charm...</p1>
